PROJECT (OpenECoSys-NetworkViewer)

cmake_minimum_required(VERSION 2.8)

########################
# Configurations
########################

SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "16alpha")
SET(CPACK_PACKAGE_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})


#OSX Architecture, will build for 32 bits systems
#set(CMAKE_OSX_ARCHITECTURES "i386")

ADD_DEFINITIONS(-DNETWORKVIEWER_VERSION="${CPACK_PACKAGE_VERSION}")

SET(CMAKE_BUILD_TYPE Release)

IF(WIN32)
	MESSAGE( STATUS "Windows version: " ${CMAKE_SYSTEM})
        SET(CMAKE_INSTALL_PREFIX "$ENV{SYSTEMDRIVE}/NetworkViewer-${CPACK_PACKAGE_VERSION}")
	MESSAGE( STATUS "Install directory is : " ${CMAKE_INSTALL_PREFIX})
ELSE(WIN32)
        SET(CMAKE_INSTALL_PREFIX "/usr/local/NetworkViewer-${CPACK_PACKAGE_VERSION}")
ENDIF(WIN32)


#finding qt
IF (WIN32)
     SET (QT_USE_QTMAIN TRUE)
ENDIF (WIN32)

find_package(Qt4 REQUIRED)


INCLUDE(InstallRequiredSystemLibraries)

#This will enable to output everything in the bin directory for testing and debugging...
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)



ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(GUI)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(console)
ADD_SUBDIRECTORY(config)
#TODO FIXME
#ADD_SUBDIRECTORY(package)




