PROJECT (OpenECoSys-NetworkViewer)

cmake_minimum_required(VERSION 2.8)

########################
# Configurations
########################
SET(NETWORKVIEWER_VERSION_MAJOR "1")
SET(NETWORKVIEWER_VERSION_MINOR "1")
SET(NETWORKVIEWER_VERSION_PATCH "16")
SET(NETWORKVIEWER_VERSION ${NETWORKVIEWER_VERSION_MAJOR}.${NETWORKVIEWER_VERSION_MINOR}.${NETWORKVIEWER_VERSION_PATCH})



#OSX Architecture, will build for 32 bits systems
#set(CMAKE_OSX_ARCHITECTURES "i386")

ADD_DEFINITIONS(-DNETWORKVIEWER_VERSION="${NETWORKVIEWER_VERSION}")

SET(CMAKE_BUILD_TYPE Release)

#INSTALL PREFIX
IF(WIN32)
	MESSAGE( STATUS "Windows version: " ${CMAKE_SYSTEM})
        SET(CMAKE_INSTALL_PREFIX "$ENV{SYSTEMDRIVE}/NetworkViewer-${NETWORKVIEWER_VERSION}")
	MESSAGE( STATUS "Install directory is : " ${CMAKE_INSTALL_PREFIX})
ELSE(WIN32)
        SET(CMAKE_INSTALL_PREFIX "/usr/local/NetworkViewer-${NETWORKVIEWER_VERSION}")
ENDIF(WIN32)

#finding qt
IF (WIN32)
     SET (QT_USE_QTMAIN TRUE)
ENDIF (WIN32)

find_package(Qt4 REQUIRED)

INCLUDE(InstallRequiredSystemLibraries)

#This will enable to output everything in the bin directory for testing and debugging...
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(GUI)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(console)
ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(package)




