#DEFINE PLUGIN INCLUDES

SET(PLUGIN_INCLUDES
	${PROJECT_SOURCE_DIR}
        ${QWT_INCLUDES}
)	

SET (PLUGIN_LIBRARIES
	networkViewerBase
	${QT_LIBRARIES}
)


SET (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/plugins)

ADD_SUBDIRECTORY(sample)
ADD_SUBDIRECTORY(ScriptEngine)
ADD_SUBDIRECTORY(Logger)
#ADD_SUBDIRECTORY(DeclarativeTest)
ADD_SUBDIRECTORY(ScopeView)
ADD_SUBDIRECTORY(dsPICBootloader)
